Fix bug on chrome where PDFs are cut off

--- a/src/main/resources/static/style/basic.css
+++ b/src/main/resources/static/style/basic.css
@@ -25,7 +25,6 @@ body {
     width: 100%;
     min-height: 100vh;
     margin: 0;
-    display: flex;
 
     background-color: var(--c-light-secondary);
     color: var(--c-dark-primary);
